refactors part of the code

--- a/index.html
+++ b/index.html
@@ -68,30 +68,30 @@
 
                 
 
-                <button class="grid-item btn btn-top btn-clear-all">C</button>
-                <button class="grid-item btn btn-top btn-clear-entry">CE</button>
-                <button class="grid-item btn btn-top btn-backspace"> ⬅ </button>           
-                <button class="grid-item btn btn-top btn-sign">+/-</button>
+                <button data-key="27" class="grid-item btn btn-top btn-clear-all">C</button>
+                <button data-key="46" class="grid-item btn btn-top btn-clear-entry">CE</button>
+                <button data-key="8" class="grid-item btn btn-top btn-backspace"> ⬅ </button>           
+                <button data-key="9" class="grid-item btn btn-top btn-sign">+/-</button>
 
-                <button class="grid-item btn btn-number btn-7">7</button>
-                <button class="grid-item btn btn-number btn-8">8</button>
-                <button class="grid-item btn btn-number btn-9">9</button>
-                <button class="grid-item btn btn-division">÷</button>
+                <button data-key="103" class="grid-item btn btn-number btn-7">7</button>
+                <button data-key="104" class="grid-item btn btn-number btn-8">8</button>
+                <button data-key="105" class="grid-item btn btn-number btn-9">9</button>
+                <button data-key="111" class="grid-item btn btn-division">÷</button>
 
-                <button class="grid-item btn btn-number btn-4">4</button>
-                <button class="grid-item btn btn-number btn-5">5</button>
-                <button class="grid-item btn btn-number btn-6">6</button>
-                <button class="grid-item btn btn-multiplication">x</button>
+                <button data-key="100" class="grid-item btn btn-number btn-4">4</button>
+                <button data-key="101" class="grid-item btn btn-number btn-5">5</button>
+                <button data-key="102" class="grid-item btn btn-number btn-6">6</button>
+                <button data-key="106" class="grid-item btn btn-multiplication">x</button>
 
-                <button class="grid-item btn btn-number btn-1">1</button>
-                <button class="grid-item btn btn-number btn-2">2</button>
-                <button class="grid-item btn btn-number btn-3">3</button>                        
-                <button class="grid-item btn btn-subtraction">-</button>
+                <button data-key="97" class="grid-item btn btn-number btn-1">1</button>
+                <button data-key="98" class="grid-item btn btn-number btn-2">2</button>
+                <button data-key="99" class="grid-item btn btn-number btn-3">3</button>                        
+                <button data-key="109" class="grid-item btn btn-subtraction">-</button>
 
-                <button class="grid-item btn btn-dot">.</button>
-                <button class="grid-item btn btn-number btn-0">0</button>
-                <button class="grid-item btn btn-equals">=</button>
-                <button class="grid-item btn btn-addition">+</button>
+                <button data-key="194"  class="grid-item btn btn-dot">.</button>
+                <button data-key="96" class="grid-item btn btn-number btn-0">0</button>
+                <button data-key="13" class="grid-item btn btn-equals">=</button>
+                <button data-key="107" class="grid-item btn btn-addition">+</button>
 
             </div>
             
