changes button icons to text, emoticons were not recognized on different devices

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class='top-div'>
                     <span class='casio lights-out'><a href="https://www.linkedin.com/in/pgsmagno/" class='lights-out'>PAULO</a></span>
                     <span class='data-bank lights-out'>DATA BANK <span class='number-150'>150</span></span>
-                    <span class='illuminator lights-out'>◀ ILLUMINATOR ▶</illuminator></span>
+                    <span class='illuminator lights-out'>< ILLUMINATOR ></illuminator></span>
                 </div>
 
                 <div class='flex-span-display'>
@@ -70,7 +70,7 @@
 
                 <button tabindex="-1" data-key="27" class="lights-out grid-item btn btn-top btn-clear-all">C</button>
                 <button tabindex="-1" data-key="46" class="lights-out grid-item btn btn-top btn-clear-entry">CE</button>
-                <button tabindex="-1" data-key="8" class="lights-out grid-item btn btn-top btn-backspace"> ⬅ </button>           
+                <button tabindex="-1" data-key="8" class="lights-out grid-item btn btn-top btn-backspace"> <- </button>           
                 <button tabindex="-1" data-key="9" class="lights-out grid-item btn btn-top btn-sign">+/-</button>
 
                 <button tabindex="-1" data-key="103" class="lights-out grid-item btn btn-number btn-7">7</button>
