reworks darkmode toggle, changes title alignment, implements blocking when not on calculator mode

--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
 
     <div class='top-bar'>
         <h1>Calculator Watch</h1>
-        <span class='sun-moon on'>🌞</span>
+
+        <div class='darkmode-toggle'>
+            <div class='sun-moon on'>🌞</div>
+        </div>
+
+
+        <!-- <span class='sun-moon on'>🌞</span> -->
     </div>
 
     <div class='button-watch-assembly'>
